--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "openai": "^4.87.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
@@ -47,5 +47,11 @@
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  },
+  "overrides": {
+    "react-speech-kit": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    }
   }
 }
